<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="open_app">This app will launch my </string>

    <string name="button_sportify_streamer">SPOTIFY STREAMER</string>
    <string name="button_scores_app">SCORES APP</string>
    <string name="button_library_app">LIBRARY APP</string>
    <string name="button_build_it_bigger">BUILD IT BIGGER</string>
    <string name="button_xyz_reader">XYZ READER</string>
    <string name="button_my_own_app">MY OWN APP</string>

    <string name="hello_world">My Nanodegress Apps!</string>
    <string name="action_settings">Settings</string>
</resources>
