<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                tools:context=".MainActivity">

    <TextView
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textSize="25sp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/button_sportify_streamer"
        android:id="@+id/button_sportify_streamer"
        android:layout_marginTop="30dp"
        android:background="@color/darkorange"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/button_scores_app"
        android:id="@+id/button_scores_app"
        android:layout_marginTop="10dp"
        android:background="@color/darkorange"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/button_library_app"
        android:id="@+id/button_library_app"
        android:layout_marginTop="10dp"
        android:background="@color/darkorange"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/button_build_it_bigger"
        android:id="@+id/button_build_it_bigger"
        android:layout_marginTop="10dp"
        android:background="@color/darkorange"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/button_xyz_reader"
        android:id="@+id/button_xyz_reader"
        android:layout_marginTop="10dp"
        android:background="@color/darkorange"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/button_my_own_app"
        android:id="@+id/button_my_own_app"
        android:layout_marginTop="10dp"
        android:background="@color/darkred"
        android:textColor="@android:color/white"/>

</LinearLayout>
